# mila_datamodules

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  benchmark.py  benchmark_results.txt  env.yaml  pyproject.toml  pytest.ini  requirements.txt  run_all_tests.sh  set_slurm_env_vars.sh  setup.py
.github/ISSUE_TEMPLATE/: feature_request.md
hydra_plugin_test/: test_hydra_plugin.py
hydra_plugins/: mila_datamodules_plugin.py
hydra_plugins/mila_datamodules/: __init__.py  mila_datamodules_plugin.py
hydra_plugins/mila_datamodules_plugin/: mila_datamodules_plugin.py
mila_datamodules/: __init__.py  blocks.py  conftest.py  errors.py  imagenet.py  imagenet_ffcv.py  imagenet_ffcv_test.py  registry.py  registry_test.py  testutils.py  types.py  utils.py  utils_test.py  vision_test.py
mila_datamodules/blocks/: __init__.py  base.py  compose.py  links.py  path_utils.py  reuse.py  types.py
mila_datamodules/cli/: _other_way.py  blocks.py  dataset_args.py  example_job.sh  main.py  prepare.py  prepare_huggingface.py  prepare_torchvision.py  prepare_torchvision_test.py  torchvision_test.py  types.py  utils.py
mila_datamodules/clusters/: __init__.py  cluster.py  cluster_enum.py  env_variables.py  mila.py  utils.py
mila_datamodules/configs/: __init__.py
notes/: beluga.txt  check_datamodules.py  check_datasets.py  create_table.py  mila.txt  narval.txt  table.md
scripts/: beluga_test.sh  cedar_test.sh  mila_test.sh
tests/: benchmark.py  check_datamodules.py  check_datasets.py  test_datamodules.py  test_datasets.py  test_hydra_plugin.py
(+90 files in other folders)
